--- a/22-Repaso-web/ejercicio.html
+++ b/22-Repaso-web/ejercicio.html
@@ -12,9 +12,10 @@
 
     <!-- Menu -->
     <ul>
-        <li>Inicio</li>
-        <li>Contenidos</li>
-        <li>Contacto</li>
+        <li> <a href="ejercicio.html" title="ejercicio">Inicio</a></li>
+        <li> <a href="contenidos.html" title="contenido">Contenidos</a> </li>
+        <li> <a href="contacto.html" title="contacto"> Contacto</a></li>
+        <li> <a href="https://google.com" title="contacto" target="_blank"> El google</a></li>
     </ul>
     <hr>
     <!-- Contenido de index -->
