Html css y js terminado

--- a/23-RepasoCSS/index.html
+++ b/23-RepasoCSS/index.html
@@ -27,10 +27,26 @@
                         Contacto
                     </a>
                 </li>
+                <li>
+                    <a href="index.html">
+                        Contacto 2
+                    </a>
+                </li>
+                <li>
+                    <a href="index.html">
+                        Contacto 3
+                    </a>
+                </li>
+                <li>
+                    <a href="index.html">
+                        Contacto 4
+                    </a>
+                </li>
             </ul>
         </nav>
 
         <div class="clearfix"></div>
+
         <section id="content">
             <article class="articulo">
                 <h2>Titulo del articulo</h2>
@@ -60,13 +76,13 @@
                 <input type="text">
                 <input type="submit" value="Buscar">
             </form>
+            
         </aside>
-
-            <footer>
-                Cristhian Zapata
-            </footer>
+        <div class="clearfix"></div>
+    <footer>
+        Cristhian Zapata - El mas pro
+    </footer>
     </div>
-
+    
 </body>
-
 </html>
